--- a/index.html
+++ b/index.html
@@ -83,22 +83,17 @@
 
                 let settings = getSettings();
 
-
                 output.textContent = createSRT(inputText.textContent, settings.padding, settings.timePerChar);
             })
 
             file.addEventListener('input', e => {
-                const reader = new FileReader();
-
-                reader.readAsText(file.files[0], fileEncoding.value);
-
-                reader.addEventListener('load', e => {
-                    inputText.value = e.target.result;
-                    setOutput(inputText.value);
-                })
-
+                readFile();
             });
-
+            fileEncoding.addEventListener('input',e => {
+                if (file.value !== '') {
+                    readFile();
+                }
+            })
             padding.addEventListener('input', e => {
                 setOutput(inputText.value);
             });
@@ -140,6 +135,16 @@
                 let paddingTime = Number(padding.value) === NaN ? TIME_PADDING : Number(padding.value);
                 return { timePerChar: timePerChar, padding: paddingTime };
             }
+            function readFile() {
+                const reader = new FileReader();
+
+                reader.readAsText(file.files[0], fileEncoding.value);
+
+                reader.addEventListener('load', e => {
+                    inputText.value = e.target.result;
+                    setOutput(inputText.value);
+                });
+            }
 
         }
 
@@ -150,6 +155,10 @@
     <style>
         html {
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+
+        body {
+            margin-inline: 2rem;
         }
 
         label {
