Link back to github page.

--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
         <textarea id="output"></textarea>
         <button id="save">Save</button>
     </section>
+    <section>
+        <a href="https://github.com/Agrarvolution/text-to-srt">Back to Github respository.</a>
+    </section>
 </body>
 
 </html>
