Add placeholder for clarity

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </select>
 
             <label for="text-input">Text input</label>
-            <textarea id="text-input" name="text-input"></textarea>
+            <textarea id="text-input" name="text-input" placeholder="If you put your text here ..."></textarea>
 
             <label for="padding">Padding in seconds.</label>
             <input type="number" name="padding" id="padding" value="">
@@ -205,7 +205,9 @@
     </section>
     <section>
         <h2>Output</h2>
-        <textarea id="output"></textarea>
+        <textarea id="output" placeholder="1
+00:00:00,000 --> 00:00:03,330
+...a valid line of .srt is generated."></textarea>
         <button id="save">Save</button>
     </section>
     <section>
